# RSI-prak-kelompok-3-Tugas2

./: .env  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
backend/: alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 7b8a4aacbcbc_init.py
src/: app.py
src/backend/: app.py
src/controller/: Account.py  Event.py  Registration.py  Role.py  User.py  account.py
src/controllers/: users.py
src/database/: connection.py
src/database/model/: connection.py  models.py  users.py
src/database/schema/: Account.py  Event.py  Registration.py  Role.py  User.py
src/dto/: Account.py  Event.py  Registration.py  Role.py  User.py  account.py  users.py
src/repositories/: Account.py  Event.py  Registration.py  Role.py  User.py  users.py
src/routes/: Account.py  Event.py  Registration.py  Role.py  User.py  users.py
src/services/: Account.py  Event.py  Registration.py  Role.py  User.py  account.py  users.py
src/utils/: app.py
